テストエコード修正